Added dependency and changed it to application.yml
Signed-off-by: davidzent <davidgin641@gmail.com>